Apply security fixes and related updates